2010-07-07	Joel Sherrill <joel.sherrill@oarcorp.com>

	PR 1606/cpukit
	* spfatal_support/init.c: Remove
	INTERNAL_ERROR_INVALID_WORKSPACE_ADDRESS since it is not generated.

2010-07-08	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* spfatal09/.cvsignore, spfatal09/Makefile.am,
	spfatal09/spfatal09.doc, spfatal09/spfatal09.scn,
	spfatal09/testcase.h: Removed files.
	* Makefile.am, configure.ac: Reflect changes above.
	* spfatal_support/init.c: Print end of test message in case of
	success.  Stop multitasking in the fatal error extension.
	* spfatal03/testcase.h, spfatal07/testcase.h: Use printk() instead of
	puts().
	* spfatal01/spfatal01.scn, spfatal02/spfatal02.scn,
	spfatal03/spfatal03.scn, spfatal04/spfatal04.scn,
	spfatal05/spfatal05.scn, spfatal06/spfatal06.scn,
	spfatal07/spfatal07.scn, spfatal08/spfatal08.scn,
	spfatal10/spfatal10.scn, spfatal11/spfatal11.scn,
	spfatal12/spfatal12.scn, spfatal13/spfatal13.scn,
	spfatal14/spfatal14.scn, spfatal15/spfatal15.scn,
	spfatal16/spfatal16.scn, spfatal17/spfatal17.scn,
	spfatal18/spfatal18.scn, spfatal19/spfatal19.scn,
	spfatal20/spfatal20.scn: Update.

2010-07-06	Joel Sherrill <joel.sherrilL@OARcorp.com>

	* sp21/init.c, sp21/sp21.scn: Tidy up with one last case to get 100%
	coverage of rtems_io_lookup_name().

2010-07-06	Joel Sherrill <joel.sherrilL@OARcorp.com>

	* sp21/Makefile.am, sp21/init.c, sp21/sp21.scn: Add
	rtems_io_lookup_name() and simplify test.
	* sp21/system.h, sp21/task1.c: Removed.

2010-07-05	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile.am, configure.ac: Add new fatal error test for termios
	initialize.
	* spfatal20/.cvsignore, spfatal20/Makefile.am, spfatal20/spfatal20.doc,
	spfatal20/spfatal20.scn, spfatal20/testcase.h: New files.

2010-07-05	Bharath Suri <bharath.s.jois@gmail.com>

	PR 1600/testing
	* spfifo05/init.c, spfifo05/spfifo05.doc, spfifo05/spfifo05.scn,
	spfifo05/Makefile.am: New tests for pipe/fifo routines.
	* Makefile.am, configure.ac: Add new test.
