@@ -15,8 +15,9 @@ SUBDIRS = \
     sp50 sp51 sp52 sp53 sp54 sp55 sp56 sp57 sp58 sp59 \
     sp60 sp61 sp62 sp63 sp64 sp65 sp66 sp67 sp68 sp69 \
     sp70 sp71 \
-    spchain spclockget spcoverage spobjgetnext spnotepad01 spprintk spsize \
-    spstkalloc spthreadq01 spwatchdog spwkspace \
+    spassoc01 spchain spclockget spcoverage spobjgetnext \
+    spnotepad01 spprintk spsize spstkalloc spthreadq01 \
+    spwatchdog spwkspace \
     sperror01 sperror02 sperror03 \
     spfatal01 spfatal02 spfatal03 spfatal04 spfatal05 spfatal06 spfatal07 \
     spfatal08 spfatal10 spfatal11 spfatal12 spfatal13 spfatal14 \
